<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="?android:attr/actionBarSize">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_text"
        android:gravity="center"
        android:textSize="40dp"
        android:layout_marginBottom="50dp" />

    <EditText
        android:id="@+id/name_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_hint"

        />

    <EditText
        android:id="@+id/telephone_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/telephone_hint"
        android:phoneNumber="true"
        android:layout_marginBottom="50dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_entry"
        android:onClick="addEntry" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/list_entries"
        android:onClick="nextActivity" />

</LinearLayout>